--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://hugo-example4.netlify.app/"
+baseURL = "https://unruffled-jennings-9534ae.netlify.app/"
 languageCode = "en-us"
 title = "Computer Science Books"
 theme= "plain"
